<?xml version="1.0" encoding="utf-8"?>

<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">

    <string name="app_name">Test Tool</string>
    <string name="title">Test Tool</string>
    <string name="action_settings">Settings</string>
    <string name="button_settings">System setting</string>
    <string name="sim_butoon">SIM card</string>
    <string name="camera">Camera</string>
    <string name="photo">Photo</string>
    <string name="sd_button">Storage card</string>
    <string name="sd_card">Internal SD</string>
    <string name="out_usb_card">External USB</string>
    <string name="progress">Progress</string>
    <string name="FreeMB">Free capacity</string>
    <string name="AllMB">Total capacity</string>
    <string name="process">Progress</string>
    <string name="begin_record">Record</string>
    <string name="start_record">Start record</string>
    <string name="stop_record">Stop record</string>
    <string name="play_record">Play record</string>
    <string name="video_button">Video</string>
    <string name="start_button">Start play</string>
    <string name="stop_button">Stop play</string>
    <string name="ok">OK</string>
    <string name="gsm_strength">GSM signal</string>
    <string name="battery">Battery</string>
    <string name="gsensor">Gsensor</string>
    <string name="com">Serial</string>
    <string name="com_title"> Select serial port</string>
    <string name="baud_title"> Select baud rate</string>
    <string name="databits_title"> Select data bit</string>
    <string name="parity_title"> Select parity</string>
    <string name="stopbits_title"> Select stop bit</string>
    <string name="text_music">Music</string>
    <string name="text_gps">GPS</string>
    <string name="text_phone">Phone</string>
    <string name="text_internet">Internet</string>
    <string name="text_gpio">GPIO</string>
    <string name="text_battery"></string>
    <string name="text_ok">OK</string>
    <string name="text_video">Video</string>
    <string name="text_photo">Photo</string>
    <string name="text_browse">Browse</string>
    <string name="text_com">Serial</string>
    <string name="text_baud">Baud rate</string>
    <string name="text_databits">Databit </string>
    <string name="text_parity">Parity </string>
    <string name="text_stopbits">Stopbit </string>
    <string name="text_autotime">Interval</string>
    <string name="text_openComButton">Open serial port</string>
    <string name="text_recvsend">Receive</string>
    <string name="text_sendsend">Send</string>
    <string name="text_clearCount">Clear count</string>
    <string name="text_clearrecv">Clear receive</string>
    <string name="text_clearsend">Clear send</string>
    <string name="text_send">Send</string>
    <string name="text_hex">Hex:</string>
    <string name="text_send_check">Send</string>
    <string name="text_rec_check">Receive</string>
    <string name="text_autoSend">Auto send</string>
    <string name="text_autotime_ms">ms</string>
    <string name="text_recvsendcount_default">0</string>
    <string name="text_sendsendcount_edit">0</string>
    <string name="text_out1_tv">out1 status:</string>
    <string name="text_out1_btn">High/Low</string>
    <string name="text_out2_tv">out2 status:</string>
    <string name="text_out2_btn">High/Low</string>
    <string name="text_usb_host_1_2_switch_btn">High/Low</string>
    <string name="text_usb_host_1_2_switch_tv">usb_host_1_2_switch status:</string>
    <string name="text_usb_host_3_switch_btn">High/Low</string>
    <string name="text_usb_host_3_switch_tv">usb_host_3_switch status:</string>
    <string name="text_sim">sim card status:</string>
    <string name="text_simcard_btn">High/Low</string>
    <string name="text_led_tv">LED status:</string>
    <string name="text_led_btn">High/Low</string>
    <string name="text_lcd_btn">High/Low</string>
    <string name="text_in1">in_1 status:</string>
    <string name="text_in3">in_3 status:</string>
    <string name="text_in2">in_2 status</string>
    <string name="text_lcd_back_tv">LCD status:</string>
    <string name="text_acc_tv">ACC status:</string>
    <string name="text_lon_tv">Longitude:</string>
    <string name="text_lon_default_value">0.000000</string>
    <string name="text_lat_tv">Latitude:</string>
    <string name="text_lat_default_value">0.000000</string>
    <string name="text_gps_time">Time:</string>
    <string name="text_gps_sate_tv">Satellite Qty:</string>
    <string name="text_gps_time_default_value">00:00:00</string>
    <string name="text_satellitenumber_default_value">0</string>
    <string name="text_gps_speed_tv">Speed:</string>
    <string name="text_gps_antenna_tv">Antenna:</string>
    <string name="text_gps_antenna_ok">Ok</string>
    <string name="text_gps_antenna_open">Open</string>
    <string name="text_gps_antenna_short">Short</string>
    <string name="text_gps_antenna_unknown">Unknown</string>
    <string name="text_gps_speed_default_value">0.0</string>
    <string name="text_gps_resetbtn_tv">  Reset  </string>
    <string name="text_in_sd_edit"> </string>
    <string name="text_in_sd_all_edit"> </string>
    <string name="text_in_sd_free_edit"> </string>
    <string name="text_out_sd_edit"> </string>
    <string name="text_out_sd_all_edit"> </string>
    <string name="text_out_sd_free_edit"> </string>
    <string name="text_out_tf_edit"> </string>
    <string name="text_out_tf_all_edit"> </string>
    <string name="text_out_tf_free_edit"> </string>
    <string name="text_conButton">Connect</string>
    <string name="text_gpsButton">Auto send GPS</string>
    <string name="text_sendEdit">Send text</string>
    <string name="text_sendButton">Send</string>
    <string name="text_recText">Receive text</string>
    <string name="text_recButton">Clear</string>
    <string name="text_Unknown">Unknown</string>
    
    <string name="built_in_sd">Built-in SD card is normal</string>
    <string name="built_in_sd_error">Built-in SD card error</string>
    <string name="external_usb_card">External USB card is inserted</string>
    <string name="external_usb_card_error">No external USB card</string>
    <string name="external_tf_card">External TF card is inserted</string>
    <string name="external_tf_card_error">No external TF card</string>

	<string name="edit_key_value">Edit key Value</string>
    <string name="key">Key</string>
    <string name="edit_key">Edit</string>
    <string name="speed">Speed</string>
    <string name="total_pulse">Total pulse</string>
    <string name="total_mileage">Total Mileage</string>
    <string name="total_time">Total Time</string>
    <string name="invalid">Key value is invalid</string>

    <string name="socket">Network communication</string>
    <string name="out_tf_card">External TF</string>
    <string name="serialPort_open_fail">open serialPort fail!</string>
    <string name="not_find_sd_card">SD card not exist, please insert the SD card</string>
    <string name="recording_message">The recording has been activated.</string>
    <string name="record_first">please record the audio first,then pause,play the audio at last.</string>
    <string name="gps_works_normally">GPS Module works Normally</string>
    <string name="open_gps_message">Please open GPS.</string>
    <string name="create_dir_fail">create dir /HW_VEDIO/ failed.</string>
    <string name="record_successfully">record successfully!</string>
    <string name="start_record_message">start to record.</string>
    <string name="record_failed">recording failed.</string>
    <string name="phote_successfully">shooting phote successfully.</string>
    <string name="phote_fail">fail to shoot the photo.</string>
     <string name="close_serialport">close serialport</string>

	<string name="text_pluse">Pulse</string>
	<string name="start">Start</string>
	<string name="stop">Stop</string>
	<string name="not_count_pluse">Not start count pulse value!</string>
	<string name="total">Total</string>
	<string name="time">Time</string>
	<string name="usb1">USB1</string>
	<string name="usb2">USB2</string>
	<string name="text_usb1_tv">USB1 status:</string>
	<string name="text_usb2_tv">USB2 status:</string>
    <string name="text_usb3_tv">USB3 status:</string>
	<string name="text_usb1_btn">High/Low</string>
	<string name="text_usb2_btn">High/Low</string>
	<string name="text_in4">in_4 status:</string>
	<string name="oemkeys">OEM keys</string>
	<string name="oem_key_setting_message">If app want to user oem keys ,please Close System user oem keys( Settings->Security->System security settings->System user oem keys)</string>
	<string name="go_settings">Settings</string>
	<string name="not_oem_key_event">Not get oem key event</string>
	<string name="rfid">RFID</string>
	<string name="rfid_sdk">RFID SDK</string>
	<string name="main_card_id">Card ID</string>
	<string name="wallet">Wallet</string>
	 <string name="block_wallet">Choose a block as your wallet</string>
    <string name="Initialize_wallet">Initialize Wallet</string>
    <string name="decrease_wallet">Decrease Wallet</string>
    <string name="increase_wallet">Increase Wallet</string>
    <string name="check_wallet">Check Wallet</string>
    <string name="card_type">Type:</string>
    <string name="card_id">ID:</string>
    <string name="def_value"></string>
    <string name="read">Read Block</string>
    <string name="write">Write Block</string>
    <string name="secret">Secret</string>
    <string name="read_rfid">Read Card id and Card type</string>
    <string name="clean">Clean</string>
    <string name="key_a">KeyA:</string>
    <string name="control">Control:</string>
    <string name="key_b">KeyB:</string>
    <string name="save">Save</string>
    <string name="wallet_manager">Wallet manager</string>
    <string name="swipe_card">Please swipe your card!</string>
    <string name="successful_charge">Successful charge.</string>
	<string name="credit_low">Sorry,your credit is running low.</string>
	<string name="decrease_value">Decrease Value:</string>
     <string name="gpio_get">GPIO get</string>
     <string name="gpio_listener">GPIO Listener</string>
     <string name="warning_message">Auto send has been turned on, confirm to turn off!</string>
	<string name="warning">Warning</string>
	<string name="connection_successful">Connection successful</string>
	<string name="reconnecting">Reconnecting</string>
	<string name="can_fd">CanFd</string>
	<string name="can">Can</string>
   	<string name="open_can_device">Open</string>
	<string name="close_can_device">Close</string>
	<string name="read_can_data">Read</string>
	<string name="write_can_data">Write</string>
	<string name="read_can_status">Status</string>
	<string name="read_can_version">Version</string>
	<string name="can_flush">Flush</string>
	<string name="can_read_write_value">Can write: <xliff:g id="write" example="5">%d</xliff:g>  Can read: <xliff:g id="read" example="5">%d</xliff:g></string>
	<string name="text_oiml">OIML</string>
	<string name="main_power_off">Main power off:</string>
	<string name="main_power_on">Main power on:</string>
	<string name="for_hire">For hire:</string>
	<string name="close_app">Close App:</string>
	<string name="shutdown">Shutdown:</string>
	<string name="brightness">Brightness</string>
	<string name="day_time_setting">Day time setting:</string>
	<string name="to">To</string>
	<string name="brightness_setting">Brightness level:</string>
	<string name="day_level">Day:</string>
	<string name="night_level">Night:</string>
    <string name="pulse_width_speed">Speed 1 (width)</string>
    <string name="pulse_speed">Speed 2 (pulses)</string>
    <string name="final_speed">Speed 3 (FINAL)</string>
</resources>