<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/bg_testtool"
    tools:context=".MainActivity" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1" >

        <Button
            android:id="@+id/settings_button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/button_settings"
            android:textSize="@dimen/activity_main_button_textSize" />

        <Button
            android:id="@+id/sim_button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/sim_butoon"
            android:textSize="@dimen/activity_main_button_textSize" />

        <Button
            android:id="@+id/camera_button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/camera"
            android:textSize="@dimen/activity_main_button_textSize" />

        <Button
            android:id="@+id/sd_button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/sd_button"
            android:textSize="@dimen/activity_main_button_textSize" />

        <Button
            android:id="@+id/music_button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/text_music"
            android:textSize="@dimen/activity_main_button_textSize" />

        <Button
            android:id="@+id/pluse_button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/text_pluse"
            android:textSize="@dimen/activity_main_button_textSize" />
        <Button
            android:id="@+id/oiml_button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/text_oiml"
            android:textSize="@dimen/activity_main_button_textSize" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1" >

        <Button
            android:id="@+id/record_button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/begin_record"
            android:textSize="@dimen/activity_main_button_textSize" />

        <Button
            android:id="@+id/gps_button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/text_gps"
            android:textSize="@dimen/activity_main_button_textSize" />

        <Button
            android:id="@+id/phone_button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/text_phone"
            android:textSize="@dimen/activity_main_button_textSize" />

        <Button
            android:id="@+id/net_button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/text_internet"
            android:textSize="@dimen/activity_main_button_textSize" />

        <Button
            android:id="@+id/video_button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/video_button"
            android:textSize="@dimen/activity_main_button_textSize" />

       <Button
            android:id="@+id/oemkeys_button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/oemkeys"
            android:textSize="@dimen/activity_main_button_textSize" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1" >

        <Button
            android:id="@+id/gsm_button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/gsm_strength"
            android:textSize="@dimen/activity_main_button_textSize" />

        <Button
            android:id="@+id/battery_button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/gsensor"
            android:textSize="@dimen/activity_main_button_textSize" />

        <Button
            android:id="@+id/gpioButton"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/text_gpio"
            android:textSize="@dimen/activity_main_button_textSize" />

        <Button
            android:id="@+id/comButton"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/com"
            android:textSize="@dimen/activity_main_button_textSize" />

        <Button
            android:id="@+id/socketButton"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/socket"
            android:textSize="@dimen/activity_main_button_textSize" />

       <Button
            android:id="@+id/rfid"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/rfid"
            android:textSize="@dimen/activity_main_button_textSize" />
        <Button
            android:id="@+id/canfdButton"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/can_fd"
            android:textSize="@dimen/activity_main_button_textSize" />

        <Button
            android:id="@+id/canButton"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/can"
            android:textSize="@dimen/activity_main_button_textSize" />

        <Button
            android:id="@+id/brightness"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/brightness"
            android:textSize="@dimen/activity_main_button_textSize" />
    </LinearLayout>

</LinearLayout>