<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_testtool"
    android:gravity="center"
    android:orientation="horizontal" >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <Button
            android:id="@+id/record_imageButton"
            android:layout_width="240dp"
            android:layout_height="80dp"
            android:text="@string/start_record"
            android:textSize="@dimen/common_button_textSize" />

        <Button
            android:id="@+id/stop_imageButton"
            android:layout_width="240dp"
            android:layout_height="80dp"
            android:layout_marginTop="20dp"
            android:text="@string/stop_record"
            android:textSize="@dimen/common_button_textSize" />

        <Button
            android:id="@+id/play_imageButton"
            android:layout_width="240dp"
            android:layout_height="80dp"
            android:layout_marginTop="20dp"
            android:text="@string/play_record"
            android:textSize="@dimen/common_button_textSize" />
    </LinearLayout>

</LinearLayout>